[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["yauhen1996 <getthe798@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
