[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["yauhen1996 <getthe798@gmail.com>"]
packages = [
  { include = "page_load" },
]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
page_load = "page_load.scripts.page_load:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
